--- a/themes/hairline/src/sass/base/_settings.scss
+++ b/themes/hairline/src/sass/base/_settings.scss
@@ -33,7 +33,7 @@ $golden-ratio: 1.61803398875;
 // Fonts
 
 $fonts: (
-    serif: 'MerryWeather',
+    serif: 'Merriweather',
     sans-serif: 'Lato',
     monospace: 'Inconsolata'
 ) !default;
